# loan-gauge

./: .dockerignore  .pre-commit-config.yaml  Makefile  README.md  create_dirs.sh  pyproject.toml
app/: __init__.py  main.py  mortgage.py
loan_gauge/: __init__.py  main.py  mortgage.py
