[tool.poetry]
name = "loan-gauge"
version = "0.1.0"
description = ""
authors = ["Doug Cresswell <104023005+doug-cresswell@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
