[tool.poetry]
name = "loan-gauge"
version = "0.1.0"
description = ""
authors = ["Doug Cresswell <104023005+doug-cresswell@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
plotly = "^5.20.0"
dash = "^2.16.1"
flask = "^3.0.3"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
