[tool.poetry]
name = "loan_gauge"
version = "0.1.0"
description = ""
authors = ["Doug Cresswell <104023005+doug-cresswell@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
plotly = "^5.20.0"
dash = "^2.16.1"
flask = "^3.0.3"
gunicorn = "^21.2.0"
numpy = "^1.26.4"
pandas = "^2.2.1"
numpy-financial = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"
pre-commit = "^3.7.0"
pytest = "^8.1.1"
coverage = "^7.4.4"
mypy = "^1.9.0"
tomli = "^2.0.1"
isort = "^5.13.2"
pydocstyle = "^6.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
